tests/kulezi_tests/bad/invalid_return03.lat
int main() {
    return x();
}

void x() {
    return;
}